fix: swagger fix
